@@ -1,19 +1,29 @@
-package org.apache.commons.lang3;
-
 public class CharUtils {
-    
-    private static final Character[] CHAR_ARRAY = new Character[128];
-    
+    private static final Character[] cache = new Character[128];
+
     static {
-        for (char c = 0; c < CHAR_ARRAY.length; c++) {
-            CHAR_ARRAY[c] = new Character(c);
+        for (int i = 0; i < cache.length; i++) {
+            cache[i] = (char) i;
         }
     }
-    
-    public static Character toCharacterObject(char ch) {
-        if (ch < CHAR_ARRAY.length) {
-            return CHAR_ARRAY[ch];
+
+    /**
+     * <p>Converte il carattere in un oggetto Character.</p>
+     * <p>Per i caratteri ASCII a 7 bit, utilizza una cache che restituirà lo stesso oggetto Character ogni volta.</p>
+     * <pre> CharUtils.toCharacterObject(' ')  = ' ' CharUtils.toCharacterObject('A')  = 'A' </pre>
+     * @param ch  il carattere da convertire
+     * @return un oggetto Character del carattere specificato
+     */
+    public static Character toCharacterObject(final char ch) {
+        if (ch >= 0 && ch < 128) {
+            return cache[ch];
         }
-        return new Character(ch);
+        return Character.valueOf(ch);
+    }
+
+    public static void main(String[] args) {
+        System.out.println(toCharacterObject(' ')); // Output: ' '
+        System.out.println(toCharacterObject('A')); // Output: 'A'
+        System.out.println(toCharacterObject('ñ')); // Output: 'ñ'
     }
 }
